# space_stations

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
space_stations/space/: README.md  pytest.ini  schema.yml
space_stations/space/space/: settings.py  urls.py
space_stations/space/stations/: admin.py  models.py
space_stations/space/stations/migrations/: 0001_initial.py  0002_station_name.py  0003_coordinates.py  0004_alter_coordinates_station_alter_station_status_and_more.py
space_stations/space/stations_api/: apps.py  serializers.py  urls.py  views.py
space_stations/space/tests/: conftest.py  test_api.py
space_stations/space/tests/fixtures/: fixtures_data.py
