[tool.poetry]
name = "space-stations"
version = "0.1.0"
description = ""
authors = ["Рогозов Михаил <mv.rogozov@yandex.ru>"]
readme = "README.md"
packages = [{include = "space_stations"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.1.3"
django-rest-framework = "0.1.0"
djangorestframework = "3.14.0"
drf-spectacular = "0.24.2"
asgiref = "3.5.2"
attrs = "22.1.0"
coverage = "6.5.0"
django = "4.1.3"
exceptiongroup = "1.0.4"
importlib-resources = "5.10.0"
inflection = "0.5.1"
iniconfig = "1.1.1"
isort = "5.10.1"
jsonschema = "4.17.1"
packaging = "21.3"
pkgutil-resolve-name = "1.3.10"
pluggy = "1.0.0"
psycopg2-binary = "2.9.5"
pyparsing = "3.0.9"
pyrsistent = "0.19.2"
pytest = "7.2.0"
pytest-django = "4.5.2"
python-dotenv = "0.21.0"
pytz = "2022.6"
pyyaml = "6.0"
sqlparse = "0.4.3"
tomli = "2.0.1"
uritemplate = "4.1.1"
zipp = "3.10.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
